--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="hb.css">
+<link rel="stylesheet" href="main.css">
 <div class="card">
 		<div class="imgBox">
 			<div class="bark"></div>
